[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.commitizen]
  version_provider = "poetry"
  major_version_zero = true

  [tool.poetry]
  name = "Template Repo"
  version = "0.0.0"
  description = "Template Repository for ScribeMD"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.11.4"

  [tool.poetry.dev-dependencies]
  commitizen = "==3.2.2" # Keep in sync with .pre-commit-config.yaml.
  pre-commit = "==3.3.3"
